# stm32f103_k2k

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  README.md  flash.bat  flash.sh
src/: config.rs  hid.rs  keyboard.rs  main.rs  matrix.rs  trallocator.rs  usbout.rs
thumb_keys/: kinesis_thumb_keys.scad  kinesis_thumb_keys.stl  thumbkeys.scad.py
